<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editor.ui.EditorFragment">

    <FrameLayout
        android:id="@+id/top_toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_top_rounded_glass"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_save"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/save_changes"
            android:src="@drawable/ic_save" />

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar_container" />

    <EditText
        android:id="@+id/markdown_editor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/dark_glass"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/bottom_toolbar_container"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar_container"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="8dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_toolbar_container" />

    <LinearLayout
        android:id="@+id/bottom_toolbar_container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_bottom_rounded_glass"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/button_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/add_header"
            android:src="@drawable/ic_header" />

        <ImageButton
            android:id="@+id/button_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/bold"
            android:src="@drawable/ic_bold" />

        <ImageButton
            android:id="@+id/button_italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/italic"
            android:src="@drawable/ic_italic" />

        <ImageButton
            android:id="@+id/button_strikeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/strikeout"
            android:src="@drawable/ic_strikeout" />

        <ImageButton
            android:id="@+id/button_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/add_image"
            android:src="@drawable/ic_image" />

        <ImageButton
            android:id="@+id/button_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/add_table"
            android:src="@drawable/ic_table" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>