<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loader.ui.LoaderFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_url"
        app:hintEnabled="true"
        app:hintTextColor="@color/light_gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_load_file"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/button_load_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/load_file"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_download"
        app:layout_constraintStart_toEndOf="@id/url_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/url_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/url_input_layout" />

    <Button
        android:id="@+id/button_open_file"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/open_file"
        android:textAllCaps="false"
        android:backgroundTint="@color/vk_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/url_input_layout"
        app:layout_constraintBottom_toTopOf="@id/button_open_file"
        android:indeterminateTint="@color/vk_blue"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>